<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/wind_power"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <Button
            android:id="@+id/wind_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/high"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/wind_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/mid"
            app:layout_constraintLeft_toLeftOf="@+id/wind_low"
            app:layout_constraintRight_toRightOf="@+id/wind_high" />

        <Button
            android:id="@+id/wind_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/low"
            app:layout_constraintLeft_toLeftOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/wind_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        app:layout_constraintTop_toBottomOf="@+id/wind_power"
        >

        <Button
            android:id="@+id/wind_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/windstop"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/rotation_angle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        app:layout_constraintTop_toBottomOf="@+id/wind_stop">

        <Button
            android:id="@+id/angle_60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/angle60"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/angle_120"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/angle120"
            app:layout_constraintLeft_toLeftOf="@+id/angle_60"
            app:layout_constraintRight_toRightOf="@+id/angle_180" />

        <Button
            android:id="@+id/angle_180"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/angle180"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/rotation_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        app:layout_constraintTop_toBottomOf="@+id/rotation_angle">

        <Button
            android:id="@+id/rotation_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/rotationstop"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/disconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        app:layout_constraintTop_toBottomOf="@+id/rotation_stop">

        <Button
            android:id="@+id/disconnect_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/disconnect"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>